@@ -36,7 +36,8 @@ kernel = {
   x86_64_efi_startup = kern/x86_64/efi/startup.S;
   i386_qemu_startup = kern/i386/qemu/startup.S;
   i386_ieee1275_startup = kern/i386/ieee1275/startup.S;
-  i386_coreboot_multiboot_startup = kern/i386/coreboot/startup.S;
+  i386_coreboot_startup = kern/i386/coreboot/startup.S;
+  i386_multiboot_startup = kern/i386/coreboot/startup.S;
   mips_yeeloong_startup = kern/mips/startup.S;
   sparc64_ieee1275_startup = kern/sparc64/ieee1275/crt0.S;
   powerpc_ieee1275_startup = kern/powerpc/ieee1275/startup.S;
@@ -65,7 +66,12 @@ kernel = {
 
   noemu_nodist = symlist.c;
 
-  noemu_noieee1275 = kern/generic/rtc_get_time_ms.c;
+  i386_pc = kern/generic/rtc_get_time_ms.c;
+  x86_efi = kern/generic/rtc_get_time_ms.c;
+  i386_qemu = kern/generic/rtc_get_time_ms.c;
+  i386_coreboot = kern/generic/rtc_get_time_ms.c;
+  i386_multiboot = kern/generic/rtc_get_time_ms.c;
+  mips_yeeloong = kern/generic/rtc_get_time_ms.c;
 
   ieee1275 = disk/ieee1275/ofdisk.c;
   ieee1275 = kern/ieee1275/cmain.c;
@@ -74,17 +80,20 @@ kernel = {
   ieee1275 = kern/ieee1275/openfw.c;
   ieee1275 = term/ieee1275/ofconsole.c;
 
-  ieee1275_mips = term/terminfo.c;
-  ieee1275_mips = term/tparm.c;
+  ieee1275 = term/terminfo.c;
+  ieee1275 = term/tparm.c;
+  mips = term/terminfo.c;
+  mips = term/tparm.c;
 
   i386 = kern/i386/dl.c;
 
   i386_coreboot_multiboot_qemu = kern/i386/coreboot/init.c;
   i386_coreboot_multiboot_qemu = term/i386/pc/vga_text.c;
 
-  i386_pc_coreboot_multiboot_qemu = term/i386/vga_common.c;
+  i386_coreboot_multiboot_qemu = term/i386/vga_common.c;
+  i386_pc = term/i386/vga_common.c;
 
-  x86_noieee1275 = kern/i386/pit.c;
+  x86 = kern/i386/pit.c;
 
   x86_efi = disk/efi/efidisk.c;
   x86_efi = kern/efi/efi.c;
@@ -121,26 +130,13 @@ kernel = {
   mips_yeeloong = bus/bonito.c;
   mips_yeeloong = bus/cs5536.c;
   mips_yeeloong = bus/pci.c;
-  mips_yeeloong = commands/extcmd.c;
-  mips_yeeloong = font/font.c;
-  mips_yeeloong = font/font_cmd.c;
-  mips_yeeloong = io/bufio.c;
   mips_yeeloong = kern/mips/cache.S;
   mips_yeeloong = kern/mips/dl.c;
   mips_yeeloong = kern/mips/init.c;
   mips_yeeloong = kern/mips/yeeloong/init.c;
-  mips_yeeloong = lib/arg.c;
   mips_yeeloong = term/at_keyboard.c;
-  mips_yeeloong = term/gfxterm.c;
   mips_yeeloong = term/serial.c;
-  mips_yeeloong = video/bitmap.c;
-  mips_yeeloong = video/bitmap_scale.c;
-  mips_yeeloong = video/fb/fbblit.c;
-  mips_yeeloong = video/fb/fbfill.c;
-  mips_yeeloong = video/fb/fbutil.c;
-  mips_yeeloong = video/fb/video_fb.c;
   mips_yeeloong = video/sm712.c;
-  mips_yeeloong = video/video.c;
 
   powerpc_ieee1275 = kern/ieee1275/init.c;
   powerpc_ieee1275 = kern/powerpc/cache.S;
@@ -161,6 +157,20 @@ kernel = {
   emu = kern/emu/misc.c;
   emu = kern/emu/mm.c;
   emu = kern/emu/time.c;
+
+  videoinkernel = lib/arg.c;
+  videoinkernel = term/gfxterm.c;
+  videoinkernel = commands/extcmd.c;
+  videoinkernel = font/font.c;
+  videoinkernel = font/font_cmd.c;
+  videoinkernel = io/bufio.c;
+  videoinkernel = video/bitmap.c;
+  videoinkernel = video/bitmap_scale.c;
+  videoinkernel = video/fb/fbblit.c;
+  videoinkernel = video/fb/fbfill.c;
+  videoinkernel = video/fb/fbutil.c;
+  videoinkernel = video/fb/video_fb.c;
+  videoinkernel = video/video.c;
 
   extra_dist = kern/i386/realmode.S;
   extra_dist = kern/i386/pc/lzma_decode.S;
@@ -301,8 +311,7 @@ module = {
   noemu = bus/usb/usbtrans.c;
   noemu = bus/usb/usbhub.c;
   enable = emu;
-  enable = i386;
-  enable = mips_yeeloong;
+  enable = usb;
   emu_condition = COND_GRUB_EMU_USB;
 };
 
@@ -310,8 +319,7 @@ module = {
   name = usbserial_common;
   common = bus/usb/serial/common.c;
   enable = emu;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = usb;
   emu_condition = COND_GRUB_EMU_USB;
 };
 
@@ -319,8 +327,7 @@ module = {
   name = usbserial_pl2303;
   common = bus/usb/serial/pl2303.c;
   enable = emu;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = usb;
   emu_condition = COND_GRUB_EMU_USB;
 };
 
@@ -328,22 +335,20 @@ module = {
   name = usbserial_ftdi;
   common = bus/usb/serial/ftdi.c;
   enable = emu;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = usb;
   emu_condition = COND_GRUB_EMU_USB;
 };
 
 module = {
   name = uhci;
   common = bus/usb/uhci.c;
-  enable = i386_pc;
+  enable = x86;
 };
 
 module = {
   name = ohci;
   common = bus/usb/ohci.c;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = pci;
 };
 
 module = {
@@ -376,9 +381,8 @@ library = {
 
 module = {
   name = cmostest;
-  i386 = commands/i386/cmostest.c;
-  enable = i386_pc;
-  enable = i386_coreboot;
+  common = commands/i386/cmostest.c;
+  enable = cmos;
 };
 
 module = {
@@ -398,7 +402,7 @@ module = {
 module = {
   name = acpi;
 
-  i386 = commands/acpi.c;
+  x86 = commands/acpi.c;
   x86_efi = commands/efi/acpi.c;
   i386_pc = commands/i386/pc/acpi.c;
   i386_coreboot = commands/i386/pc/acpi.c;
@@ -504,7 +508,7 @@ module = {
   name = hdparm;
   common = commands/hdparm.c;
   common = lib/hexdump.c;
-  enable = i386_pc;
+  enable = pci;
 };
 
 module = {
@@ -549,8 +553,7 @@ module = {
   name = lspci;
   common = commands/lspci.c;
 
-  enable = x86;
-  enable = mips;
+  enable = pci;
 };
 
 module = {
@@ -662,8 +665,7 @@ module = {
 module = {
   name = usbtest;
   common = commands/usbtest.c;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = usb;
   enable = emu;
   emu_condition = COND_GRUB_EMU_USB;
 };
@@ -738,15 +740,13 @@ module = {
 module = {
   name = ata;
   common = disk/ata.c;
-  enable = x86;
-  enable = mips;
+  enable = pci;
 };
 
 module = {
   name = ata_pthru;
   common = disk/ata_pthru.c;
-  enable = x86;
-  enable = mips_yeeloong;
+  enable = pci;
 };
 
 module = {
@@ -758,8 +758,7 @@ module = {
 module = {
   name = usbms;
   common = disk/usbms.c;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = usb;
   enable = emu;
   emu_condition = COND_GRUB_EMU_USB;
 };
@@ -806,10 +805,7 @@ module = {
   name = font;
   common = font/font.c;
   common = font/font_cmd.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
@@ -977,10 +973,7 @@ module = {
 module = {
   name = bufio;
   common = io/bufio.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
@@ -1023,14 +1016,11 @@ module = {
 
 module = {
   name = datetime;
-  x86_noefi_mips = lib/cmos_datetime.c;
+  cmos = lib/cmos_datetime.c;
   x86_efi = lib/efi/datetime.c;
   sparc64_ieee1275 = lib/ieee1275/datetime.c;
   powerpc_ieee1275 = lib/ieee1275/datetime.c;
-  enable = x86;
-  enable = mips;
-  enable = sparc64_ieee1275;
-  enable = powerpc_ieee1275;
+  enable = noemu;
 };
 
 module = {
@@ -1129,34 +1119,15 @@ module = {
 
 module = {
   name = mmap;
-  i386_pc = mmap/mmap.c;
-  i386_pc = mmap/i386/uppermem.c;
-  i386_pc = mmap/i386/mmap.c;
+  common = mmap/mmap.c;
+  x86 = mmap/i386/uppermem.c;
+  x86 = mmap/i386/mmap.c;
+
   i386_pc = mmap/i386/pc/mmap.c;
   i386_pc = mmap/i386/pc/mmap_helper.S;
 
-  x86_efi = mmap/mmap.c;
-  x86_efi = mmap/i386/uppermem.c;
-  x86_efi = mmap/i386/mmap.c;
   x86_efi = mmap/efi/mmap.c;
 
-  i386_coreboot = mmap/mmap.c;
-  i386_coreboot = mmap/i386/uppermem.c;
-  i386_coreboot = mmap/i386/mmap.c;
-
-  i386_multiboot = mmap/mmap.c;
-  i386_multiboot = mmap/i386/uppermem.c;
-  i386_multiboot = mmap/i386/mmap.c;
-
-  i386_qemu = mmap/mmap.c;
-  i386_qemu = mmap/i386/uppermem.c;
-  i386_qemu = mmap/i386/mmap.c;
-
-  i386_ieee1275 = mmap/mmap.c;
-  i386_ieee1275 = mmap/i386/uppermem.c;
-  i386_ieee1275 = mmap/i386/mmap.c;
-
-  mips_yeeloong = mmap/mmap.c;
   mips_yeeloong = mmap/mips/yeeloong/uppermem.c;
 
   enable = x86;
@@ -1256,10 +1227,7 @@ module = {
 module = {
   name = gfxterm;
   common = term/gfxterm.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
@@ -1288,8 +1256,7 @@ module = {
 module = {
   name = usb_keyboard;
   common = term/usb_keyboard.c;
-  enable = i386_pc;
-  enable = mips_yeeloong;
+  enable = usb;
 };
 
 module = {
@@ -1334,19 +1301,13 @@ module = {
 module = {
   name = bitmap;
   common = video/bitmap.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
   name = bitmap_scale;
   common = video/bitmap_scale.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
@@ -1388,19 +1349,13 @@ module = {
   common = video/fb/fbblit.c;
   common = video/fb/fbfill.c;
   common = video/fb/fbutil.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
   name = video;
   common = video/video.c;
-  enable = emu;
-  enable = x86;
-  enable = sparc64;
-  enable = powerpc;
+  enable = videomodules;
 };
 
 module = {
